--- a/_config.yml
+++ b/_config.yml
@@ -26,19 +26,19 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Senior undergraduate student"
   location         : "Beijing, China"
-  employer         : ["IIIS, Tsinghua University"](https://iiis.tsinghua.edu.cn/)
+  employer         : "[IIIS, Tsinghua University](https://iiis.tsinghua.edu.cn/)"
   uri              : # URL
   email            : "tiantang673@gmail.com" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : # "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
-  orcid            : # "http://orcid.org/yourorcidurl"
-  semantic         : # URL
-  pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
-  scopus           : # URL
+  # arxiv            : # URL - Update with the correct link to your profile
+  # googlescholar    : # "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  # impactstory      : # URL
+  # orcid            : # "http://orcid.org/yourorcidurl"
+  # semantic         : # URL
+  # pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  # researchgate     : # URL
+  # scopus           : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
@@ -58,7 +58,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : Tian Tang
+  # linkedin         : Tian Tang
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
