--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Tian's Webpage"
+title                    : "Tian's Homepage"
 title_separator          : "-"
 name                     : &name "Tian Tang"
 description              : &description "personal description"
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Senior undergraduate student"
   location         : "Beijing, China"
-  employer         : "[IIIS, Tsinghua University](https://iiis.tsinghua.edu.cn/)"
+  employer         : "IIIS, Tsinghua University"
   uri              : # URL
   email            : "tiantang673@gmail.com" 
 
@@ -58,7 +58,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  # linkedin         : Tian Tang
+  linkedin         : tian-tang-323b002ba
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
