--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Beijing, China"
   employer         : "IIIS, Tsinghua University"
   uri              : # URL
-  email            : "tiantang673@gmail.com" 
+  email            : "tang-t21@mails.tsinghua.edu.cn" 
 
   # Academic websites
   # arxiv            : # URL - Update with the correct link to your profile
